# dsba-itop2021-hw1

./: LICENSE  movies.csv
data/: movies.csv
src/: CMakeLists.txt
src/ex1_modelview/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  comboboxdelegate.cpp  comboboxdelegate.h  examplemodel.cpp  examplemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h
